# neural-rule-inducer

./: .gitignore  LICENSE  README.md  evaluate_uci.py  pyproject.toml  train.py
configs/: default.json
rule_inducer/: __init__.py  _hub.py  checkpoint.py  counterfactual_necessity.py  data.py  eval.py  losses.py  model.py
rule_inducer/training/: __init__.py  checkpoint.py  ddp_callbacks.py  ddp_components.py  engine.py  logging.py  protocols.py  state.py
scripts/: push_to_hf.py
