[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rule-inducer"
version = "0.1.0"
description = "Differentiable DNF rule induction in PyTorch"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rule_inducer*"]
